--- a/cours-flask/exemple4/templates/accueil.html
+++ b/cours-flask/exemple4/templates/accueil.html
@@ -2,5 +2,5 @@
     <head>
         <title>{{nom}}</title>
     </head>
-    <body>Bienvenue !</body>
+    <body>Bienvenue ! {{ VotreNom }}</body>
 </html>
